Resolved defect #699946 where long subtitle overlapped caret on mobile

--- a/webroot/skin/frontend/blueacorn/mis/css/styles.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles.css
@@ -3074,7 +3074,7 @@ a.skip-link {
     padding: 0;
     padding-bottom: 14px; }
   .nav-primary li.level1 a {
-    padding: 0 15px 0 20px;
+    padding: 0 40px 0 20px;
     height: auto;
     color: #00247B;
     position: relative; }
